# uStoreAPI/uStoreAPI/bin/Release/net7.0/swagger.json
@@ -334,7 +334,45 @@
         ],
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/SolicitudesApartadoDto"
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetails"
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetails"
+            }
+          },
+          "500": {
+            "description": "Server Error"
+          }
+        }
+      }
+    },
+    "/api/Apartados/GetNumeroSolicitudes": {
+      "get": {
+        "tags": [
+          "Apartados"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/SolicitudesApartadoDto"
+            }
           },
           "400": {
             "description": "Bad Request",
@@ -2970,7 +3008,7 @@
         "parameters": [
           {
             "in": "query",
-            "name": "idMall",
+            "name": "idTienda",
             "type": "integer",
             "format": "int32",
             "collectionFormat": "multi"
